--- a/requirements.txt
+++ b/requirements.txt
@@ -167,9 +167,7 @@ torchaudio==2.1.1+cu118
 torchvision==0.16.1+cu118
 tornado==6.4
 tqdm==4.66.1
-transformers==4.35.2
-typer==0.9.0
-typing-inspect==0.9.0
+typer==0.9.0typing-inspect==0.9.0
 typing_extensions==4.8.0
 tzdata==2023.3
 tzlocal==5.2
